<resources>
    <string name="app_name">SHG</string>
    <string name="hum_soil">Влажность\nпочвы</string>
    <string name="temperature">Температура</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="co2">CO2</string>
    <string name="fan">Куллер</string>
    <string name="door">Дверь</string>
    <string name="light_room">Освещение</string>
    <string name="brightness">Яркость</string>
    <string name="water">Уровень\nводы</string>
    <string name="temp_unit">°C</string>
    <string name="hum_unit">%</string>
    <string name="pres_unit">мм</string>
    <string name="pump">Полив</string>
    <string name="house_nav">Дом</string>
    <string name="greenhouse_nav">Теплица</string>
    <string name="brightness_text">0</string>

</resources>
